Repair wrong position of circle after clicking on node

--- a/AlgoLearn/src/algolearn/gui/css/stylesheet.css
+++ b/AlgoLearn/src/algolearn/gui/css/stylesheet.css
@@ -300,6 +300,7 @@
 	-fx-border-color: #101010;
 	-fx-border-radius: 5em;
 	-fx-alignment: center;
+	-fx-padding: 0px;
 	
    	-fx-background-radius: 5em;
 	-fx-min-width: 35px;
